Hover Menu Z-index Fix

--- a/style.css
+++ b/style.css
@@ -69,7 +69,7 @@ input:focus {
   position: absolute;
   border-radius: 5px;
   display: none;
-  z-index: 99;
+  z-index: 7;
 }
 
 .navbar__menu-row {
@@ -188,7 +188,7 @@ input:focus {
 .hero__headline {
   margin: 0 3rem;
   width: 40%;
-  z-index: 2;
+  z-index: 1;
 }
 
 .hero__headline h1 {
@@ -235,7 +235,7 @@ input:focus {
   padding: 2rem;
   border-radius: 4px;
   border: #ddd 1px solid;
-  z-index: 2;
+  z-index: 1;
   box-shadow: rgba(0, 0, 0, 0.1) 0px 10px 20px 0px;
 }
 
